--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "framer-motion": "^5.3.0",
+    "next": "^12.0.1",
+    "next-themes": "0.0.15",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "postcss": "^8.3.11",
+    "tailwindcss": "^2.2.19"
   }
 }
